# yewprint-template

./: .genignore  .gitignore  Cargo.toml  LICENSE.Apache-2.0  LICENSE.MIT  README.md  netlify.toml
.github/: dependabot.yml
.github/workflows/: main.yml  pr.yml  rust.yml
app/: Cargo.toml
app/src/: app.rs  lib.rs
app/static/: index.html
src/: app.rs  lib.rs  main.rs
static/: index.html
xtask/: Cargo.toml
xtask/src/: main.rs
