[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "MediaQueryList"] }
yew = "0.19"
yewprint = { git = "https://github.com/yewprint/yewprint.git", branch = "main" }

[workspace]
members = ["xtask"]
